# jc-media-streaming-app

./: .gitignore
backend/: .env.example  .gitignore  package-lock.json  (+1 more)
backend/lambdas/python/: pyproject.toml  requirements.txt
backend/lambdas/python/function/get_media_url/: main.py  main1.py
backend/lambdas/python/function/get_medias/: main.py
backend/lambdas/python/layer/: package_layer.sh
backend/lambdas/python/layer/boto3_helper/: cloudfront_signer.py  dynamodb_resource_table.py  secrets_manager.py
backend/lambdas/python/layer/helper/: cloudfront_signer_helper.py  secrets_manager_helper.py
backend/lambdas/python/layer/jc_boto3_helper/: cloudfront_signer.py  dynamodb_resource_table.py  secrets_manager.py
backend/lambdas/python/layer/jc_custom_utilities/: logger.py  types.py
backend/lambdas/python/layer/python/: requirements.txt
backend/lambdas/python/layer/python/boto3_helper/: cloudfront_signer.py  dynamodb_resource_table.py  secrets_manager.py
backend/lambdas/python/layer/python/custom_utils/: logger.py
backend/lambdas/python/layer/python/utils/: exceptions.py  functions.py
backend/lambdas/python/layer/shared/helper/: cloudfront_signer_helper copy.py  cloudfront_signer_helper.py  media_metadata_table_helper.py  secrets_manager_helper.py
backend/lambdas/python/layer/shared/utils/: dynamodb_resource_table.py
backend/lambdas/python/layer/utils/: dynamodb_resource_table.py
backend/lambdas/python/tests/layer/jc_boto3_helper/: test_cloudfront_signer.py
backend/lambdas/python/tests/layer/jc_custom_utilities/: test_functions.py
(+11 files in other folders)
